--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.5.0",
+    "mqtt": "^5.0.3",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   },
